syntax = "proto3";

package auth_v1;

 
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


option go_package = "github.com/mihailtudos/microservices/auth/pkg/auth_v1;auth_v1";

// AuthV1 handles users CRUD operations
service AuthV1 {
  // Create creates a new user
  rpc Create(CreateRequest) returns (CreateResponse);
  // Get retrieves a user by ID
  rpc Get(GetRequest) returns (GetResponse);
  // List retrieves a list of users
  rpc List(ListRequest) returns (ListResponse);
  // Update updates an existing user
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  // Delete deletes a user by ID
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

enum Role {
    USER = 0;
    ADMIN = 1;
}

// UserRegistration is the type for a simple User
message UserRegistration {
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    Role role = 5;
}

message UserInfo {
  string name = 2;
  string email = 3;
  Role role = 4;
}

message User {
  string id = 1;
  UserInfo user = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message UpdateUserInfo {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue email = 2;
}

message CreateRequest {
  UserRegistration info = 1;
}

message CreateResponse {
  string id = 1;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  User user = 1;
}

message ListRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message ListResponse {
  repeated UserInfo users = 1;
}

message UpdateRequest {
  string id = 1;
  UserInfo info = 2;
}

message DeleteRequest {
  string id = 1;
}